# cinder-mcp

./: README.md  package-lock.json  package.json  tsconfig.json
cinder-bridge/: CinderBridge.h  README.md  cinderblock.xml
knowledge/: 2d-cairo.md  app-lifecycle.md  data-viz.md  fft-visualizer.md  geometry.md  gl-setup.md  noise-math.md  platform.md  signals-timeline.md  svg.md  textures.md  video.md
knowledge/api/: app.md  audio.md  cairo.md  geom.md  gl.md  ip.md  log.md  params.md  signals.md  svg.md
projects/BlockBounce/: CMakeLists.txt  README.md
projects/BlockBounce/assets/shaders/: composite.frag  glow.frag  outline.frag  outline.vert  trail.frag
projects/BlockBounce/include/: Resources.h
projects/BlockBounce/src/: BlockBounceApp.cpp
projects/BlockBounce/web/: app.js  index.html  style.css
projects/Burst/: CMakeLists.txt
projects/Burst/src/: BurstApp.cpp
projects/Burst/web/: app.js  index.html  style.css  vercel.json
projects/Echo/: CMakeLists.txt  README.md
projects/Echo/assets/: imgui.ini
projects/Echo/src/: EchoApp.cpp
projects/Ghost/: CMakeLists.txt
projects/Ghost/assets/: imgui.ini
projects/Ghost/src/: GhostApp.cpp
projects/Resonance/: CMakeLists.txt
projects/Resonance/assets/: imgui.ini
projects/Resonance/include/: Resources.h
projects/Resonance/src/: ResonanceApp.cpp
scripts/: build-knowledge.ts  index-docs.ts
src/: config.ts  index.ts  knowledge-db.ts
src/runtime/: osc-client.ts
src/tools/assets/: index.ts
src/tools/blocks/: index.ts
src/tools/codegen/: index.ts
src/tools/config/: index.ts
src/tools/diagnostics/: index.ts
src/tools/docs/: index.ts
src/tools/runtime/: index.ts
src/tools/scaffold/: index.ts
tests/runtime/: osc-client.test.ts
tests/tools/: codegen.test.ts  docs.test.ts  runtime.test.ts  scaffold.test.ts
(+6 files in other folders)
